// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountDropdown matches snapshot 1`] = `
<Dropdown
  className="account-dropdown"
  removeElement={true}
>
  <DropdownTrigger
    className=""
    href="/#"
  >
    <img
      alt="avatar"
      className="account-dropdown--avatar"
      src="/assets/img/avatar.png"
    />
  </DropdownTrigger>
  <DropdownContent
    className=""
  >
    <div
      className="account-dropdown--identity account-dropdown--segment"
    >
      <div>
        Signed in as
      </div>
      <strong />
    </div>
    <div
      className="account-dropdown--identity account-dropdown--segment account-dropdown-link"
    >
      <Link
        onClick={[Function]}
        replace={false}
        to="/profile/dashboard"
      >
        Profile
      </Link>
    </div>
    <div
      className="account-dropdown--identity account-dropdown--segment account-dropdown-link"
    >
      <InteractiveElement
        className=""
        onClick={[Function]}
        type="a"
      >
        Logout
      </InteractiveElement>
    </div>
  </DropdownContent>
</Dropdown>
`;

exports[`AccountDropdown matches snapshot when shouldDisplayName is true 1`] = `
<Dropdown
  className="account-dropdown"
  removeElement={true}
>
  <DropdownTrigger
    className=""
    href="/#"
  >
    <img
      alt="avatar"
      className="account-dropdown--avatar"
      src="/assets/img/avatar.png"
    />
    <span
      className="account-dropdown--name"
      id="account-username"
    />
  </DropdownTrigger>
  <DropdownContent
    className=""
  >
    <div
      className="account-dropdown--identity account-dropdown--segment"
    >
      <div>
        Signed in as
      </div>
      <strong />
    </div>
    <div
      className="account-dropdown--identity account-dropdown--segment account-dropdown-link"
    >
      <Link
        onClick={[Function]}
        replace={false}
        to="/profile/dashboard"
      >
        Profile
      </Link>
    </div>
    <div
      className="account-dropdown--identity account-dropdown--segment account-dropdown-link"
    >
      <InteractiveElement
        className=""
        onClick={[Function]}
        type="a"
      >
        Logout
      </InteractiveElement>
    </div>
  </DropdownContent>
</Dropdown>
`;
